feat: close mainline 71 file lifecycle (#390)
* feat: harden file lifecycle and attachment flows

* test: stabilize finance browser gates

* chore: document SQL safety bindings

* ci: bootstrap E2E object storage bucket

* test: align backend lifecycle gates

---------

Co-authored-by: kismet84 <kismet84@users.noreply.github.com>